--- a/Website.html
+++ b/Website.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Website Title</title>
-    <link rel="stylesheet" href="style.css"> <!-- link to your CSS file -->
+    <link rel="stylesheet" href="Website.css"> <!-- link to your CSS file -->
 </head>
 <body>
     
-    <h1>Welcome to My Website</h1>
-    <p>This is a basic HTML page structure.</p>
+
 
 </body>
 </html>
