--- a/Website.html
+++ b/Website.html
@@ -10,7 +10,25 @@
     <div class="image-container">
         <img src="ESSU.png" alt="Turon Image">
     </div>
-    <div class="box"></div>
+    <div class="circle"></div>
+    <div class="circle1"></div>
+    <div class="circle2"></div>
+
+    <section class="text">
+        <div class="text-container">
+            <h2>Our <span> Special Turon</span>are located in <span>ESSU</span></h2>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Libero minus quaerat repellat assumenda nemo distinctio 
+                autem consequuntur culpa aperiam dolores, inventore fugit, 
+                quisquam vero dolor vel aliquid ducimus! Quo, ut.
+            </p>
+        </div>
+
+    </section>
+    
+
+
 
 </body>
 </html>
