--- a/Website.html
+++ b/Website.html
@@ -4,26 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Website Title</title>
-    <link rel="stylesheet" href="Website.css"> <!-- link to your CSS file -->
+    <link rel="stylesheet" href="Website.css"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=location_on" />
 </head>
 <body>
     <div class="image-container">
         <img src="ESSU.png" alt="Turon Image">
     </div>
-    <div class="circle"></div>
-    <div class="circle1"></div>
-    <div class="circle2"></div>
+ 
 
-    <section class="text">
-        <div class="text-container">
-            <h2>Our <span> Special Turon</span>are located in <span>ESSU</span></h2>
+      <section class="text">
+            <div class="circle"></div>
+            <div class="circle1"></div>
+            <div class="circle2"></div>        
+            <div class="text-container">
+                <h2>Our <span> Special Turon</span> are located in <span>ESSU</span></h2>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                <p><span class="material-symbols-outlined">location_on</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Libero minus quaerat repellat assumenda nemo distinctio 
                 autem consequuntur culpa aperiam dolores, inventore fugit, 
                 quisquam vero dolor vel aliquid ducimus! Quo, ut.
-            </p>
-        </div>
+                </p>
+            </div>
 
     </section>
     
