--- a/Website.html
+++ b/Website.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Website Title</title>
     <link rel="stylesheet" href="Website.css"> 
+    <link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Bogle&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=location_on" />
 </head>
 <body>
@@ -18,13 +19,15 @@
             <div class="circle1"></div>
             <div class="circle2"></div>        
             <div class="text-container">
-                <h2>Our <span> Special Turon</span> are located in <span>ESSU</span></h2>
-
-                <p><span class="material-symbols-outlined">location_on</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Libero minus quaerat repellat assumenda nemo distinctio 
-                autem consequuntur culpa aperiam dolores, inventore fugit, 
-                quisquam vero dolor vel aliquid ducimus! Quo, ut.
+                <h2>Our <span class="Special-text"> Special Turon</span> are located in <span class="Special-text">ESSU</span></h2>
+                <p class="location">
+                    <a href="https://www.google.com/maps?q=Real+Street+Maypangdan,+Borongan+City+6800+Eastern+Samar+Philippines" 
+                        target="_blank" class="location-link">
+                         <span class="material-symbols-outlined">location_on</span>
+                    </a>
+                        Real Street,Maypangdan, Borongan City 6800 Eastern Samar, Philippines
                 </p>
+
             </div>
 
     </section>
