--- a/Website.html
+++ b/Website.html
@@ -20,9 +20,13 @@
             <div class="circle2"></div>        
             <div class="text-container">
                 <h2>Our <span class="Special-text"> Special Turon</span> are located in <span class="Special-text">ESSU</span></h2>
+                <h3>
+                    <a href="https://www.facebook.com/profile.php?id=61581711857540" target="Page" class="page-link">
+                        BUY NOW!!
+                </h3>
                 <p class="location">
                     <a href="https://www.google.com/maps?q=Real+Street+Maypangdan,+Borongan+City+6800+Eastern+Samar+Philippines" 
-                        target="_blank" class="location-link">
+                        target="location" class="location-link">
                          <span class="material-symbols-outlined">location_on</span>
                     </a>
                         Real Street,Maypangdan, Borongan City 6800 Eastern Samar, Philippines
